JaCoCo added tests added coverage over 80% + minor fix